--- a/packages/theme/src/alert.less
+++ b/packages/theme/src/alert.less
@@ -1,3 +1,20 @@
-/* Alert
-------------------*/
-@--alert-padding: 8px 16px;
+@import "common/variable";
+
+@vfclass: vf-alert;
+
+.@{vfclass} {
+  font-size: 14px;
+
+  &__content {
+    font-size: 14px;
+    border-radius: @--alert-radius;
+  }
+
+  &__title {
+    font-size: 14px;
+  }
+
+  &__description {
+    font-size: 14px;
+  }
+}
