--- a/packages/theme/src/alert.less
+++ b/packages/theme/src/alert.less
@@ -4,17 +4,83 @@
 
 .@{vfclass} {
   font-size: 14px;
-
-  &__content {
-    font-size: 14px;
-    border-radius: @--alert-radius;
-  }
+  width: 100%;
+  padding: @--alert-padding;
+  margin: 0;
+  border-radius: @--alert-radius;
+  position: relative;
+  background-color: @--color-white;
+  overflow: hidden;
+  opacity: 1;
 
   &__title {
-    font-size: 14px;
+    font-size: 18px;
   }
 
   &__description {
     font-size: 14px;
+  }
+
+  &--info {
+    &.is-light {
+      background-color: @--alert-info-color;
+      color: @--color-info;
+    }
+
+    &.is-dark {
+      background-color: @--color-info;
+      color: @--color-white;
+    }
+    .@{vfclass}__description {
+      color: @--color-info;
+    }
+  }
+
+  &--success {
+    &.is-light {
+      background-color: @--alert-success-color;
+      color: @--color-success;
+
+      .@{vfclass}__description {
+        color: @--color-success;
+      }
+    }
+
+    &.is-dark {
+      background-color: @--color-success;
+      color: @--color-white;
+    }
+  }
+
+  &--warning {
+    &.is-light {
+      background-color: @--alert-warning-color;
+      color: @--color-warning;
+
+      .@{vfclass}__description {
+        color: @--color-warning;
+      }
+    }
+
+    &.is-dark {
+      background-color: @--color-warning;
+      color: @--color-white;
+    }
+  }
+
+  &--error {
+    &.is-light {
+      background-color: @--alert-danger-color;
+      color: @--color-danger;
+
+      .@{vfclass}__description {
+        color: @--color-danger;
+      }
+    }
+
+    &.is-dark {
+      background-color: @--color-danger;
+      color: @--color-white;
+    }
   }
 }
