--- a/packages/theme/src/alert.less
+++ b/packages/theme/src/alert.less
@@ -14,11 +14,12 @@
   opacity: 1;
 
   &__title {
-    font-size: 18px;
+    font-size: 14px;
   }
 
   &__description {
-    font-size: 14px;
+    margin-top: 10px;
+    font-size: 13px;
   }
 
   &--info {
