--- a/packages/theme/src/common/variable.less
+++ b/packages/theme/src/common/variable.less
@@ -10,6 +10,7 @@
 @--color-success: #67c23a;
 @--color-warning: #e6a23c;
 @--color-danger: #f56c6c;
+@--color-font: #545454;
 
 @--color-info-lighter: mix(@--color-white, @--color-info, 90%);
 @--color-success-lighter: mix(@--color-white, @--color-success, 90%);
@@ -24,3 +25,10 @@
 @--alert-success-color: @--color-success-lighter;
 @--alert-warning-color: @--color-warning-lighter;
 @--alert-danger-color: @--color-danger-lighter;
+
+/* Task-Tree
+------------------*/
+@--task-tree-sub-folder-padding-left: 16px;
+@--task-tree-sub-folder-margin-top: 5px;
+@--task-tree-sub-folder-margin-left: 16px;
+@--task-tree-color: @--color-font;
