--- a/packages/theme/src/task-tree.less
+++ b/packages/theme/src/task-tree.less
@@ -16,6 +16,11 @@ ul li {
   li {
     line-height: 25px;
   }
+
+  .folder-empty {
+    margin-left: @--task-tree-sub-folder-margin-left;
+    margin-top: @--task-tree-sub-folder-margin-top;
+  }
 }
 
 .@{vftaskfolder} {
