--- a/packages/theme/src/common/variable.less
+++ b/packages/theme/src/common/variable.less
@@ -32,3 +32,6 @@
 @--task-tree-sub-folder-margin-top: 5px;
 @--task-tree-sub-folder-margin-left: 16px;
 @--task-tree-color: @--color-font;
+
+/* Medal
+-----------------*/
