--- a/packages/theme/src/medal.less
+++ b/packages/theme/src/medal.less
@@ -11,7 +11,8 @@
     width: 100%;
     height: 100%;
   }
-  .medal-cross {
+  .medal-cross,
+  .medal-expand {
     position: relative;
     @--cover: 60%;
 
