--- a/packages/theme/src/medal.less
+++ b/packages/theme/src/medal.less
@@ -5,14 +5,15 @@
 .@{vfmedal} {
   width: 100%;
   display: inline-block;
-  background-color: #fff;
 
   .medal-type {
     width: 100%;
     height: 100%;
   }
   .medal-cross,
-  .medal-expand {
+  .medal-expand,
+  .medal-plus,
+  .medal-minus {
     position: relative;
     @--cover: 50%;
 
@@ -53,6 +54,12 @@
         margin: auto;
         background-color: #e3e2e1;
       }
+    }
+  }
+  .medal-plus,
+  .medal-minus {
+    .out-path {
+      border-radius: 50%;
     }
   }
 }
