--- a/packages/theme/src/task-tree.less
+++ b/packages/theme/src/task-tree.less
@@ -137,6 +137,7 @@ ul li {
     .rcon {
       display: inline-block;
       height: @--title-height;
+      line-height: @--title-height;
       line-height: 1;
       width: 100px;
       vertical-align: 9px;
