--- a/packages/theme/src/medal.less
+++ b/packages/theme/src/medal.less
@@ -9,12 +9,12 @@
   .medal-type {
     width: 100%;
     height: 100%;
+    position: relative;
   }
   .medal-cross,
   .medal-expand,
   .medal-plus,
   .medal-minus {
-    position: relative;
     @--cover: 50%;
 
     .out-path {
@@ -60,6 +60,49 @@
   .medal-minus {
     .out-path {
       border-radius: 50%;
+    }
+  }
+
+  .medal-editor {
+    .bottom-path {
+      position: absolute;
+      height: 4px;
+      width: 65%;
+      background-color: #e3e2e1;
+      bottom: 20%;
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+    .main {
+      width: 20%;
+      height: 60%;
+      transform: rotateZ(45deg);
+
+      position: absolute;
+      top: -10%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+
+      .top {
+        width: 100%;
+        height: 20%;
+        border: 2px solid #e3e2e1;
+        border-bottom: none;
+      }
+      .middle {
+        width: 100%;
+        height: 60%;
+        border: 2px solid #e1e3e3;
+      }
+      .bottom {
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-color: #e3e2e1 transparent transparent transparent;
+      }
     }
   }
 }
