--- a/packages/theme/src/medal.less
+++ b/packages/theme/src/medal.less
@@ -105,4 +105,19 @@
       }
     }
   }
+  .medal-status {
+    .status-back {
+      background-color: #e3e2e1;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      display: flex;
+
+      .status-text {
+        line-height: 1;
+        margin: auto;
+        color: #999;
+      }
+    }
+  }
 }
