--- a/packages/theme/src/common/mixins.less
+++ b/packages/theme/src/common/mixins.less
@@ -14,3 +14,10 @@
     height: 0;
   }
 }
+
+.textOverflow() {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  white-space: nowrap;
+}
