--- a/packages/theme/src/task-tree.less
+++ b/packages/theme/src/task-tree.less
@@ -236,6 +236,10 @@ ul li {
   &-add {
     .operation-add-input {
       padding: 8px 0;
+
+      .el-select .el-input {
+        width: 100px;
+      }
     }
   }
 }
