--- a/packages/theme/src/tabs.less
+++ b/packages/theme/src/tabs.less
@@ -125,4 +125,13 @@
   &__active-bar {
     width: 100%;
   }
+  &__pane {
+    width: 100%;
+  }
+  &__new-tab {
+    font-size: 16px;
+  }
+  &__header {
+    width: 100%;
+  }
 }
