--- a/packages/theme/src/tabs.less
+++ b/packages/theme/src/tabs.less
@@ -5,10 +5,11 @@
 .@{vftabs} {
   width: 100%;
 
-  &-panel {
-    background-color: #ddd;
+  &-panel,
+  &__nav {
+    background-color: #dee1e5;
     height: 40px;
-    margin: 20px auto;
+    margin: 10px auto;
     padding: 8px 8px 0;
     box-sizing: border-box;
     display: flex;
@@ -16,11 +17,12 @@
     overflow: hidden;
   }
 
-  &-tab {
+  &-tab,
+  &__item {
     position: relative;
     font-size: 12px;
     border-radius: 10px 10px 0 0;
-    flex-basis: 220px;
+    flex-basis: 180px;
     display: flex;
     align-items: center;
     cursor: default;
@@ -46,28 +48,28 @@
       position: absolute;
       width: 1px;
       height: 20px;
-      background-color: #909090;
+      background-color: #8b8e93;
     }
     &-close {
       width: 18px;
       height: 18px;
       text-align: center;
-      line-height: 15px;
+      line-height: 18px;
       right: 8px;
       top: 8px;
       position: absolute;
-      font-size: 18px;
-      transform: rotate(45deg);
+      font-size: 14px;
+      // transform: rotate(45deg);
       border-radius: 50%;
       cursor: pointer;
       font-weight: bold;
 
       &:hover {
-        background-color: #d0d0d0;
+        background-color: #d7d7d8;
       }
     }
 
-    &.active {
+    &.is-active {
       background-color: #fff;
       z-index: 2;
 
@@ -96,17 +98,17 @@
       right: -15px;
       transform: rotate(205deg);
     }
-    & + &:not(.active) &-line {
+    & + &:not(.is-active) &-line {
       display: block;
     }
-    &:hover:not(.active) {
-      background-color: #ededed;
+    &:hover:not(.is-active) {
+      background-color: #f8f9fb;
       &-line {
         display: none !important;
       }
       &::before,
       &::after {
-        border-top: 5px solid #ededed;
+        border-top: 5px solid #f8f9fb;
       }
     }
     &:hover + & {
@@ -122,9 +124,6 @@
 }
 
 .@{vftabs} {
-  &__active-bar {
-    width: 100%;
-  }
   &__pane {
     width: 100%;
   }
