--- a/packages/theme/src/tabs.less
+++ b/packages/theme/src/tabs.less
@@ -1,4 +1,5 @@
 @import "./common/variable";
+@import "./common/mixins";
 
 @vftabs: vf-tabs;
 
@@ -26,6 +27,11 @@
     display: flex;
     align-items: center;
     cursor: default;
+
+    &-text {
+      max-width: 110px;
+      .textOverflow();
+    }
 
     &-icon {
       width: 16px;
@@ -59,7 +65,6 @@
       top: 8px;
       position: absolute;
       font-size: 14px;
-      // transform: rotate(45deg);
       border-radius: 50%;
       cursor: pointer;
       font-weight: bold;
@@ -103,7 +108,7 @@
     }
     &:hover:not(.is-active) {
       background-color: #f8f9fb;
-      &-line {
+      .vf-tabs-tab-line {
         display: none !important;
       }
       &::before,
@@ -111,8 +116,13 @@
         border-top: 5px solid #f8f9fb;
       }
     }
+    &:hover {
+      .vf-tabs-tab-line {
+        display: none !important;
+      }
+    }
     &:hover + & {
-      &-line {
+      .vf-tabs-tab-line {
         display: none !important;
       }
     }
@@ -128,7 +138,11 @@
     width: 100%;
   }
   &__new-tab {
-    font-size: 16px;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 0 10px;
+    font-weight: bold;
+    cursor: pointer;
   }
   &__header {
     width: 100%;
